# multibodysim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/multibodysim/: __init__.py  flexible_beam.py  flexible_simulator.py  flexible_symbolic_model.py  rigid_simulator.py  rigid_symbolic_model.py  simulator.py  symbolic_model.py
src/multibodysim/allocation/: __init__.py  bounded_minimum_effort.py  controllers.py  effectiveness.py  minimum_effort.py  state_allocation.py
src/multibodysim/analysis/: __init__.py  allocation_metrics.py  controller_metrics.py  gravity_gradient_control.py  simulation_metrics.py  symbolic_dependence.py
src/multibodysim/beam/: __init__.py  boundary_compatible_beam.py  cantilever_beam.py  clamped_clamped_beam.py
src/multibodysim/codegen/: __init__.py  artifacts.py  autowrap_eval_differentials.py  autowrap_eval_gravity_gradient.py  autowrap_eval_kinematics.py  constants.py  metadata.py  preparation.py  reference.py  symbolic.py  validation.py
src/multibodysim/controllers/: base.py  control_effectiveness.py  gravity_gradient.py  metrics.py  pd_attitude.py  planar_attitude_reference.py  plant_view.py  rigid_gravity_gradient.py
src/multibodysim/flexible/: flexible_ns_dynamics.py  flexible_ns_simulator.py  flexible_simulator.py  flexible_simulator_non_symmetric.py  flexible_symbolic_model.py  flexible_symbolic_non_symmetric.py
src/multibodysim/flexible/legacy/: flexible_simulator_non_symmetric.py  flexible_symbolic_non_symmetric.py
src/multibodysim/inputshaping/: zv_input_shaping.py
src/multibodysim/multiangle/: __init__.py  dynamics.py  simulator.py
src/multibodysim/plotting/: __init__.py  simulation_plots.py
src/multibodysim/references/: __init__.py  kepler.py  multiangle_reference.py  multiangle_state.py  planar_attitude.py
src/multibodysim/rigid/: rigid_simulator.py  rigid_simulator_7parts.py  rigid_symbolic_7part.py  rigid_symbolic_model.py
src/multibodysim/scenarios/: __init__.py  multiangle.py
src/multibodysim/utilities/: run_simulation.py
tests/: conftest.py  test_allocated_planar_attitude_controller.py  test_allocation_metrics.py  test_boundary_compatible_beam.py  test_bounded_minimum_effort_allocation.py  test_codegen.py  test_control_effectiveness.py  test_control_metrics.py  test_eom.py  test_flexible_ns_dynamics.py  test_flexible_ns_simulator.py  test_flexible_satellite.py  test_generalized_forces.py  test_gravity_gradient_compensator.py  test_gravity_gradient_control.py  test_kepler_reference.py  test_kinematics.py  test_minimum_effort_allocation.py  test_multiangle_coordinate_mapper.py  test_multiangle_dynamics.py  test_multiangle_reference_builder.py  test_multiangle_scenario_runner.py  test_multiangle_simulator.py  test_pd_attitude.py  test_planar_attitude_references.py  test_plotting.py  test_rigid_gravity_gradient_feedforward.py  test_rigid_nbody_satellite.py  test_rigid_satellite.py  test_simulation_metrics.py  test_simulator.py  test_state_allocation.py  test_symbolic.py  test_symbolic_dependence.py
