[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multibodysim"
version = "0.1.0"
authors = [
  { name="Jalal El Hazzat", email="jalal@anqatech.com" },
]
description = "This package enables multibody dynamics in space."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "sympy>=1.9",
    "matplotlib>=3.5",
    "orjson>=3.9",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<10",
    "pytest-cov>=5,<7",
]
dev = [
    "pytest>=8,<10",
    "pytest-cov>=5,<7",
]

[project.urls]
Homepage = "https://github.com/yourusername/multibodysim"
Issues = "https://github.com/yourusername/multibodysim/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "--strict-markers",
#     "--strict-config", 
    "--verbose",
#     "--tb=short",
    "--cov=multibodysim",
#     "--cov-report=term-missing",
#     "--cov-report=html:htmlcov",
#     "--cov-report=xml:coverage.xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    # "integration: marks tests as integration tests",
    # "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    # "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    # "pragma: no cover",
    # "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
